--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@capacitor/android": "^5.0.5",
+    "@capacitor/core": "^5.0.5",
+    "@capacitor/ios": "^5.0.5",
     "@material-ui/core": "^4.7.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.21.1",
@@ -62,6 +65,7 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "^5.0.5",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "enzyme-to-json": "^3.4.0",
